# oj-quality-agent

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  judge.py  pyproject.toml  requirements.txt  run_cases_file.py  setup_quality_ui.bat  start_quality_ui.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/quality_agent/quality_agent/: __init__.py  __main__.py  cli.py
agents/quality_agent/quality_agent/core/: __init__.py  config.py  state.py
agents/quality_agent/quality_agent/integrations/: __init__.py  langfuse.py
agents/quality_agent/quality_agent/nodes/: __init__.py  analysis.py  evaluation.py  inspection.py  reporting.py  scoring.py
agents/quality_agent/quality_agent/tools/: __init__.py  (+1 more)
apps/quality_ui/quality_ui/: __init__.py  app.py  config_store.py  launcher.py
cases/code/: cases_new_questions.json  cases_new_questions_5.json  cases_new_questions_single.json  cases_to_test.json
cases/math/: cases_math.json  cases_math_small.json
cases/mixed/: cases_mixed_3_code_3_math.json
docs/: AGENT_ACCEPTANCE_REPORT.md  INSTALL_AS_TOOL.md  PROJECT_DEEP_DIVE_AGENT_LEARNING.md  PY_FILES_APPLICATION_GUIDE.md  QUALITY_AGENT_DESIGN.md
tools/oj_eval/oj_eval/: __init__.py  cli.py
tools/oj_eval/pipeline_app/: __init__.py  application.py  case_service.py  cli.py  constants.py  json_loader.py  math_quiz.py  mode_registry.py
tools/oj_eval/pipeline_core/: __init__.py  config.py  core.py  langfuse_trace.py  reporting.py  runner.py  services.py
(+13 files in other folders)
