[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oj-quality-platform"
version = "0.1.0"
description = "Dataset quality-inspection platform with an OJ evaluation tool, LangGraph agent, and Streamlit UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agent", "dataset-quality", "langchain", "langgraph", "langfuse", "streamlit", "oj-evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "openpyxl>=3.0.0",
]

[project.scripts]
oj-eval = "oj_eval.cli:main"
oj-quality-agent = "quality_agent.cli:main"
oj-quality-ui = "quality_ui.launcher:main"

[project.optional-dependencies]
agent = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langfuse>=3.0.0",
    "streamlit>=1.36.0",
]

[tool.setuptools]
py-modules = ["run_cases_file"]

[tool.setuptools.packages.find]
where = ["tools/oj_eval", "agents/quality_agent", "apps/quality_ui"]
include = ["oj_eval*", "quality_agent*", "quality_ui*", "pipeline_app*", "pipeline_core*"]
